--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,16 +37,23 @@
 
         <receiver
             android:enabled="true"
-            android:name="com.brew.projecteye.receiver.LockScreenReceiver" >
-            <intent-filter
-                android:priority="999">
+            android:name="com.brew.projecteye.receiver.BootCompleteReceiver" >
+            <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
+        <receiver
+        android:enabled="true"
+        android:name="com.brew.projecteye.receiver.LockScreenReceiver" >
+        <intent-filter>
+            <action android:name="android.intent.action.BOOT_COMPLETED" />
+        </intent-filter>
+    </receiver>
     </application>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
 
 </manifest>
