Fixed a bunch of stuff. See email on Sep 22

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.brew.projecteye" >
+    package="com.brew.e"
+    android:versionCode="4"
+    android:versionName="1.3">
     <uses-sdk android:minSdkVersion="8" />
 
     <application
@@ -23,7 +25,7 @@
 
 
         <activity
-            android:name=".StartLockScreen"
+            android:name=".LociSettingsActivity"
             android:launchMode="singleTask">
             <intent-filter
                 android:priority="999">
@@ -37,14 +39,14 @@
 
         <receiver
             android:enabled="true"
-            android:name="com.brew.projecteye.receiver.BootCompleteReceiver" >
+            android:name="com.brew.e.receiver.BootCompleteReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
         <receiver
         android:enabled="true"
-        android:name="com.brew.projecteye.receiver.LockScreenReceiver" >
+        android:name="com.brew.e.receiver.LockScreenReceiver" >
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
         </intent-filter>
@@ -52,8 +54,7 @@
     </application>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.INTERNET" />
-
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
 </manifest>
