--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.brew.e"
-    android:versionCode="4"
-    android:versionName="1.3">
+    package="com.brew.foci"
+    android:versionCode="11"
+    android:versionName="1.7">
     <uses-sdk android:minSdkVersion="8" />
 
     <application
@@ -11,21 +11,14 @@
         <activity android:label="@string/app_name"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait"
-            android:name=".LockScreenAppActivity"
+            android:name="com.brew.foci.LockScreenAppActivity"
             android:launchMode="singleInstance"
             >
-            <!--
-            <intent-filter >
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-            -->
         </activity>
 
 
         <activity
-            android:name=".LociSettingsActivity"
+            android:name="com.brew.foci.SettingsActivity"
             android:launchMode="singleTask">
             <intent-filter
                 android:priority="999">
@@ -34,19 +27,19 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".LockScreenService" >
+        <service android:name="com.brew.foci.LockScreenService" >
         </service>
 
         <receiver
             android:enabled="true"
-            android:name="com.brew.e.receiver.BootCompleteReceiver" >
+            android:name="com.brew.foci.receiver.BootCompleteReceiver" >
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
         <receiver
         android:enabled="true"
-        android:name="com.brew.e.receiver.LockScreenReceiver" >
+        android:name="com.brew.foci.receiver.LockScreenReceiver" >
         <intent-filter>
             <action android:name="android.intent.action.BOOT_COMPLETED" />
         </intent-filter>
